refactor: simplify bean creation logic in BeanContainer